docs/upbound-provider-azure/1.3/network/v1beta1/vpnSite.md
---
permalink: /upbound-provider-azure/1.3/network/v1beta1/vpnSite/
---

# network.v1beta1.vpnSite

"VPNSite is the Schema for the VPNSites API. Manages a VPN Site."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAddressCidrs(addressCidrs)`](#fn-specforproviderwithaddresscidrs)
    * [`fn withAddressCidrsMixin(addressCidrs)`](#fn-specforproviderwithaddresscidrsmixin)
    * [`fn withDeviceModel(deviceModel)`](#fn-specforproviderwithdevicemodel)
    * [`fn withDeviceVendor(deviceVendor)`](#fn-specforproviderwithdevicevendor)
    * [`fn withLink(link)`](#fn-specforproviderwithlink)
    * [`fn withLinkMixin(link)`](#fn-specforproviderwithlinkmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withO365Policy(o365Policy)`](#fn-specforproviderwitho365policy)
    * [`fn withO365PolicyMixin(o365Policy)`](#fn-specforproviderwitho365policymixin)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`fn withVirtualWanId(virtualWanId)`](#fn-specforproviderwithvirtualwanid)
    * [`obj spec.forProvider.link`](#obj-specforproviderlink)
      * [`fn withBgp(bgp)`](#fn-specforproviderlinkwithbgp)
      * [`fn withBgpMixin(bgp)`](#fn-specforproviderlinkwithbgpmixin)
      * [`fn withFqdn(fqdn)`](#fn-specforproviderlinkwithfqdn)
      * [`fn withIpAddress(ipAddress)`](#fn-specforproviderlinkwithipaddress)
      * [`fn withName(name)`](#fn-specforproviderlinkwithname)
      * [`fn withProviderName(providerName)`](#fn-specforproviderlinkwithprovidername)
      * [`fn withSpeedInMbps(speedInMbps)`](#fn-specforproviderlinkwithspeedinmbps)
      * [`obj spec.forProvider.link.bgp`](#obj-specforproviderlinkbgp)
        * [`fn withAsn(asn)`](#fn-specforproviderlinkbgpwithasn)
        * [`fn withPeeringAddress(peeringAddress)`](#fn-specforproviderlinkbgpwithpeeringaddress)
    * [`obj spec.forProvider.o365Policy`](#obj-specforprovidero365policy)
      * [`fn withTrafficCategory(trafficCategory)`](#fn-specforprovidero365policywithtrafficcategory)
      * [`fn withTrafficCategoryMixin(trafficCategory)`](#fn-specforprovidero365policywithtrafficcategorymixin)
      * [`obj spec.forProvider.o365Policy.trafficCategory`](#obj-specforprovidero365policytrafficcategory)
        * [`fn withAllowEndpointEnabled(allowEndpointEnabled)`](#fn-specforprovidero365policytrafficcategorywithallowendpointenabled)
        * [`fn withDefaultEndpointEnabled(defaultEndpointEnabled)`](#fn-specforprovidero365policytrafficcategorywithdefaultendpointenabled)
        * [`fn withOptimizeEndpointEnabled(optimizeEndpointEnabled)`](#fn-specforprovidero365policytrafficcategorywithoptimizeendpointenabled)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
    * [`obj spec.forProvider.virtualWanIdRef`](#obj-specforprovidervirtualwanidref)
      * [`fn withName(name)`](#fn-specforprovidervirtualwanidrefwithname)
      * [`obj spec.forProvider.virtualWanIdRef.policy`](#obj-specforprovidervirtualwanidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidervirtualwanidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidervirtualwanidrefpolicywithresolve)
    * [`obj spec.forProvider.virtualWanIdSelector`](#obj-specforprovidervirtualwanidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidervirtualwanidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidervirtualwanidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidervirtualwanidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.virtualWanIdSelector.policy`](#obj-specforprovidervirtualwanidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidervirtualwanidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidervirtualwanidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAddressCidrs(addressCidrs)`](#fn-specinitproviderwithaddresscidrs)
    * [`fn withAddressCidrsMixin(addressCidrs)`](#fn-specinitproviderwithaddresscidrsmixin)
    * [`fn withDeviceModel(deviceModel)`](#fn-specinitproviderwithdevicemodel)
    * [`fn withDeviceVendor(deviceVendor)`](#fn-specinitproviderwithdevicevendor)
    * [`fn withLink(link)`](#fn-specinitproviderwithlink)
    * [`fn withLinkMixin(link)`](#fn-specinitproviderwithlinkmixin)
    * [`fn withLocation(location)`](#fn-specinitproviderwithlocation)
    * [`fn withO365Policy(o365Policy)`](#fn-specinitproviderwitho365policy)
    * [`fn withO365PolicyMixin(o365Policy)`](#fn-specinitproviderwitho365policymixin)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`fn withVirtualWanId(virtualWanId)`](#fn-specinitproviderwithvirtualwanid)
    * [`obj spec.initProvider.link`](#obj-specinitproviderlink)
      * [`fn withBgp(bgp)`](#fn-specinitproviderlinkwithbgp)
      * [`fn withBgpMixin(bgp)`](#fn-specinitproviderlinkwithbgpmixin)
      * [`fn withFqdn(fqdn)`](#fn-specinitproviderlinkwithfqdn)
      * [`fn withIpAddress(ipAddress)`](#fn-specinitproviderlinkwithipaddress)
      * [`fn withName(name)`](#fn-specinitproviderlinkwithname)
      * [`fn withProviderName(providerName)`](#fn-specinitproviderlinkwithprovidername)
      * [`fn withSpeedInMbps(speedInMbps)`](#fn-specinitproviderlinkwithspeedinmbps)
      * [`obj spec.initProvider.link.bgp`](#obj-specinitproviderlinkbgp)
        * [`fn withAsn(asn)`](#fn-specinitproviderlinkbgpwithasn)
        * [`fn withPeeringAddress(peeringAddress)`](#fn-specinitproviderlinkbgpwithpeeringaddress)
    * [`obj spec.initProvider.o365Policy`](#obj-specinitprovidero365policy)
      * [`fn withTrafficCategory(trafficCategory)`](#fn-specinitprovidero365policywithtrafficcategory)
      * [`fn withTrafficCategoryMixin(trafficCategory)`](#fn-specinitprovidero365policywithtrafficcategorymixin)
      * [`obj spec.initProvider.o365Policy.trafficCategory`](#obj-specinitprovidero365policytrafficcategory)
        * [`fn withAllowEndpointEnabled(allowEndpointEnabled)`](#fn-specinitprovidero365policytrafficcategorywithallowendpointenabled)
        * [`fn withDefaultEndpointEnabled(defaultEndpointEnabled)`](#fn-specinitprovidero365policytrafficcategorywithdefaultendpointenabled)
        * [`fn withOptimizeEndpointEnabled(optimizeEndpointEnabled)`](#fn-specinitprovidero365policytrafficcategorywithoptimizeendpointenabled)
    * [`obj spec.initProvider.virtualWanIdRef`](#obj-specinitprovidervirtualwanidref)
      * [`fn withName(name)`](#fn-specinitprovidervirtualwanidrefwithname)
      * [`obj spec.initProvider.virtualWanIdRef.policy`](#obj-specinitprovidervirtualwanidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidervirtualwanidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidervirtualwanidrefpolicywithresolve)
    * [`obj spec.initProvider.virtualWanIdSelector`](#obj-specinitprovidervirtualwanidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidervirtualwanidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidervirtualwanidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidervirtualwanidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.virtualWanIdSelector.policy`](#obj-specinitprovidervirtualwanidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidervirtualwanidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidervirtualwanidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of VPNSite

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"VPNSiteSpec defines the desired state of VPNSite"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAddressCidrs

```ts
withAddressCidrs(addressCidrs)
```

"Specifies a list of IP address CIDRs that are located on your on-premises site. Traffic destined for these address spaces is routed to your local site."

### fn spec.forProvider.withAddressCidrsMixin

```ts
withAddressCidrsMixin(addressCidrs)
```

"Specifies a list of IP address CIDRs that are located on your on-premises site. Traffic destined for these address spaces is routed to your local site."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withDeviceModel

```ts
withDeviceModel(deviceModel)
```

"The model of the VPN device."

### fn spec.forProvider.withDeviceVendor

```ts
withDeviceVendor(deviceVendor)
```

"The name of the VPN device vendor."

### fn spec.forProvider.withLink

```ts
withLink(link)
```

"One or more link blocks as defined below."

### fn spec.forProvider.withLinkMixin

```ts
withLinkMixin(link)
```

"One or more link blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The Azure Region where the VPN Site should exist. Changing this forces a new VPN Site to be created."

### fn spec.forProvider.withO365Policy

```ts
withO365Policy(o365Policy)
```

"An o365_policy block as defined below."

### fn spec.forProvider.withO365PolicyMixin

```ts
withO365PolicyMixin(o365Policy)
```

"An o365_policy block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"The name of the Resource Group where the VPN Site should exist. Changing this forces a new VPN Site to be created."

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags which should be assigned to the VPN Site."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags which should be assigned to the VPN Site."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withVirtualWanId

```ts
withVirtualWanId(virtualWanId)
```

"The ID of the Virtual Wan where this VPN site resides in. Changing this forces a new VPN Site to be created."

## obj spec.forProvider.link

"One or more link blocks as defined below."

### fn spec.forProvider.link.withBgp

```ts
withBgp(bgp)
```

"A bgp block as defined above."

### fn spec.forProvider.link.withBgpMixin

```ts
withBgpMixin(bgp)
```

"A bgp block as defined above."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.link.withFqdn

```ts
withFqdn(fqdn)
```

"The FQDN of this VPN Site Link."

### fn spec.forProvider.link.withIpAddress

```ts
withIpAddress(ipAddress)
```

"The IP address of this VPN Site Link."

### fn spec.forProvider.link.withName

```ts
withName(name)
```

"The name which should be used for this VPN Site Link."

### fn spec.forProvider.link.withProviderName

```ts
withProviderName(providerName)
```

"The name of the physical link at the VPN Site. Example: ATT, Verizon."

### fn spec.forProvider.link.withSpeedInMbps

```ts
withSpeedInMbps(speedInMbps)
```

"The speed of the VPN device at the branch location in unit of mbps. Defaults to 0."

## obj spec.forProvider.link.bgp

"A bgp block as defined above."

### fn spec.forProvider.link.bgp.withAsn

```ts
withAsn(asn)
```

"The BGP speaker's ASN."

### fn spec.forProvider.link.bgp.withPeeringAddress

```ts
withPeeringAddress(peeringAddress)
```

"The BGP peering IP address."

## obj spec.forProvider.o365Policy

"An o365_policy block as defined below."

### fn spec.forProvider.o365Policy.withTrafficCategory

```ts
withTrafficCategory(trafficCategory)
```

"A traffic_category block as defined above."

### fn spec.forProvider.o365Policy.withTrafficCategoryMixin

```ts
withTrafficCategoryMixin(trafficCategory)
```

"A traffic_category block as defined above."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.o365Policy.trafficCategory

"A traffic_category block as defined above."

### fn spec.forProvider.o365Policy.trafficCategory.withAllowEndpointEnabled

```ts
withAllowEndpointEnabled(allowEndpointEnabled)
```

"Is allow endpoint enabled? The Allow endpoint is required for connectivity to specific O365 services and features, but are not as sensitive to network performance and latency as other endpoint types. Defaults to false."

### fn spec.forProvider.o365Policy.trafficCategory.withDefaultEndpointEnabled

```ts
withDefaultEndpointEnabled(defaultEndpointEnabled)
```

"Is default endpoint enabled? The Default endpoint represents O365 services and dependencies that do not require any optimization, and can be treated by customer networks as normal Internet bound traffic. Defaults to false."

### fn spec.forProvider.o365Policy.trafficCategory.withOptimizeEndpointEnabled

```ts
withOptimizeEndpointEnabled(optimizeEndpointEnabled)
```

"Is optimize endpoint enabled? The Optimize endpoint is required for connectivity to every O365 service and represents the O365 scenario that is the most sensitive to network performance, latency, and availability. Defaults to false."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.virtualWanIdRef

"Reference to a VirtualWAN in network to populate virtualWanId."

### fn spec.forProvider.virtualWanIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.virtualWanIdRef.policy

"Policies for referencing."

### fn spec.forProvider.virtualWanIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.virtualWanIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.virtualWanIdSelector

"Selector for a VirtualWAN in network to populate virtualWanId."

### fn spec.forProvider.virtualWanIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.virtualWanIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.virtualWanIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.virtualWanIdSelector.policy

"Policies for selection."

### fn spec.forProvider.virtualWanIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.virtualWanIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAddressCidrs

```ts
withAddressCidrs(addressCidrs)
```

"Specifies a list of IP address CIDRs that are located on your on-premises site. Traffic destined for these address spaces is routed to your local site."

### fn spec.initProvider.withAddressCidrsMixin

```ts
withAddressCidrsMixin(addressCidrs)
```

"Specifies a list of IP address CIDRs that are located on your on-premises site. Traffic destined for these address spaces is routed to your local site."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withDeviceModel

```ts
withDeviceModel(deviceModel)
```

"The model of the VPN device."

### fn spec.initProvider.withDeviceVendor

```ts
withDeviceVendor(deviceVendor)
```

"The name of the VPN device vendor."

### fn spec.initProvider.withLink

```ts
withLink(link)
```

"One or more link blocks as defined below."

### fn spec.initProvider.withLinkMixin

```ts
withLinkMixin(link)
```

"One or more link blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withLocation

```ts
withLocation(location)
```

"The Azure Region where the VPN Site should exist. Changing this forces a new VPN Site to be created."

### fn spec.initProvider.withO365Policy

```ts
withO365Policy(o365Policy)
```

"An o365_policy block as defined below."

### fn spec.initProvider.withO365PolicyMixin

```ts
withO365PolicyMixin(o365Policy)
```

"An o365_policy block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags which should be assigned to the VPN Site."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags which should be assigned to the VPN Site."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withVirtualWanId

```ts
withVirtualWanId(virtualWanId)
```

"The ID of the Virtual Wan where this VPN site resides in. Changing this forces a new VPN Site to be created."

## obj spec.initProvider.link

"One or more link blocks as defined below."

### fn spec.initProvider.link.withBgp

```ts
withBgp(bgp)
```

"A bgp block as defined above."

### fn spec.initProvider.link.withBgpMixin

```ts
withBgpMixin(bgp)
```

"A bgp block as defined above."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.link.withFqdn

```ts
withFqdn(fqdn)
```

"The FQDN of this VPN Site Link."

### fn spec.initProvider.link.withIpAddress

```ts
withIpAddress(ipAddress)
```

"The IP address of this VPN Site Link."

### fn spec.initProvider.link.withName

```ts
withName(name)
```

"The name which should be used for this VPN Site Link."

### fn spec.initProvider.link.withProviderName

```ts
withProviderName(providerName)
```

"The name of the physical link at the VPN Site. Example: ATT, Verizon."

### fn spec.initProvider.link.withSpeedInMbps

```ts
withSpeedInMbps(speedInMbps)
```

"The speed of the VPN device at the branch location in unit of mbps. Defaults to 0."

## obj spec.initProvider.link.bgp

"A bgp block as defined above."

### fn spec.initProvider.link.bgp.withAsn

```ts
withAsn(asn)
```

"The BGP speaker's ASN."

### fn spec.initProvider.link.bgp.withPeeringAddress

```ts
withPeeringAddress(peeringAddress)
```

"The BGP peering IP address."

## obj spec.initProvider.o365Policy

"An o365_policy block as defined below."

### fn spec.initProvider.o365Policy.withTrafficCategory

```ts
withTrafficCategory(trafficCategory)
```

"A traffic_category block as defined above."

### fn spec.initProvider.o365Policy.withTrafficCategoryMixin

```ts
withTrafficCategoryMixin(trafficCategory)
```

"A traffic_category block as defined above."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.o365Policy.trafficCategory

"A traffic_category block as defined above."

### fn spec.initProvider.o365Policy.trafficCategory.withAllowEndpointEnabled

```ts
withAllowEndpointEnabled(allowEndpointEnabled)
```

"Is allow endpoint enabled? The Allow endpoint is required for connectivity to specific O365 services and features, but are not as sensitive to network performance and latency as other endpoint types. Defaults to false."

### fn spec.initProvider.o365Policy.trafficCategory.withDefaultEndpointEnabled

```ts
withDefaultEndpointEnabled(defaultEndpointEnabled)
```

"Is default endpoint enabled? The Default endpoint represents O365 services and dependencies that do not require any optimization, and can be treated by customer networks as normal Internet bound traffic. Defaults to false."

### fn spec.initProvider.o365Policy.trafficCategory.withOptimizeEndpointEnabled

```ts
withOptimizeEndpointEnabled(optimizeEndpointEnabled)
```

"Is optimize endpoint enabled? The Optimize endpoint is required for connectivity to every O365 service and represents the O365 scenario that is the most sensitive to network performance, latency, and availability. Defaults to false."

## obj spec.initProvider.virtualWanIdRef

"Reference to a VirtualWAN in network to populate virtualWanId."

### fn spec.initProvider.virtualWanIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.virtualWanIdRef.policy

"Policies for referencing."

### fn spec.initProvider.virtualWanIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.virtualWanIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.virtualWanIdSelector

"Selector for a VirtualWAN in network to populate virtualWanId."

### fn spec.initProvider.virtualWanIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.virtualWanIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.virtualWanIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.virtualWanIdSelector.policy

"Policies for selection."

### fn spec.initProvider.virtualWanIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.virtualWanIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."